--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,12 +22,18 @@ services:
   seed:
     container_name: le4db_seed
     build:
-      context: .
+      context: backend
       dockerfile: docker/Dockerfile
     command: go run seed.go
     volumes:
     - .:/go/src/github.com/atrn0/le4db
-
+  psqldef:
+    container_name: le4db_psqldef
+    build:
+      context: backend
+      dockerfile: docker/sqldef/Dockerfile
+    volumes:
+    - psql:/schema
 
 volumes:
   le4db_pgdata:
