get db connection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   app:
     container_name: le4db_app_dev
     build:
-      context: .
-      dockerfile: docker/Dockerfile
+      context: backend
+      dockerfile: Dockerfile
     command: reflex -r '(\.go$$|go\.mod)' -s go run main.go
     volumes:
       - .:/go/src/github.com/atrn0/le4db
