impl guests get rooms

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     command: reflex -r '(\.go$$|go\.mod)' -s go run main.go
     volumes:
       - .:/go/src/github.com/atrn0/le4db
+    ports:
+    - 8080:8080
   postgres:
     container_name: le4db_postgres
     image: postgres:13
@@ -23,7 +25,7 @@ services:
     container_name: le4db_seed
     build:
       context: backend
-      dockerfile: docker/Dockerfile
+      dockerfile: Dockerfile
     command: go run seed.go
     volumes:
     - .:/go/src/github.com/atrn0/le4db
